.disabled/homeassistant/homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassist-deployment
  namespace: homeassistant
  labels:
    app: homeassist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
    spec:
      containers:
        - name: homeassist
          image: homeassistant/home-assistant
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: "/config"
              name: homeassist-persistent-storage
            - mountPath: "/config/configuration.yaml"
              subPath: "configuration.yaml"
              name: homeassist-config
      volumes:
        - name: homeassist-config
          secret:
            secretName: homeassist-config
            defaultMode: 0777
        - name: homeassist-persistent-storage
          persistentVolumeClaim:
            claimName: homeassist-pv-claim
