.disabled/homeassistant/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassist
  namespace: homeassistant
spec:
  type: ClusterIP
  selector:
    app: homeassist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8123
