.disabled/homeassistant/homeassistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-lets-encrypt
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - ha.joachimprinzbach.com
      secretName: ha-cert
  rules:
    - host: ha.joachimprinzbach.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-service
                port:
                  name: http
